--- a/main.html
+++ b/main.html
@@ -17,6 +17,7 @@
     .info { position: absolute; bottom: 10px; right: 150px; z-index: 10; background: rgba(0, 0, 0, 0.5); color: white; padding: 10px; border-radius: 5px; }
     #startARBtn { position: absolute; top: 10px; left: 10px; z-index: 10; background: rgba(0, 0, 0, 0.7); color: white; padding: 10px; border: none; border-radius: 5px; cursor: pointer; }
     #captureButton { position: absolute; top: 50px; left: 10px; z-index: 10; background: rgba(0, 0, 0, 0.7); color: white; padding: 10px; border: none; border-radius: 5px; cursor: pointer; }
+    #predictionImage { position: absolute; top: 10px; left: 150px; z-index: 10; }
   </style>
 </head>
 <body>
@@ -27,119 +28,135 @@
     <button class="button" id="showInfoBtn">Show Info</button>
   </div>
   <div class="info" id="info">Information will be displayed here.</div>
+  <img id="predictionImage" style="display: none;" />
 
   <script>
     let flower, reticle, camera, scene, renderer, session, glBinding;
     let flowerPlaced = false;
+    let zDistance = 0;
+    let rotationVector = new THREE.Vector3(0, 0, 0);
     let captureNext = false;
     let model;
 
     async function loadModel() {
-      try {
-        model = await tf.loadLayersModel('jsModel/model.json');
-        updateInfo("Model loaded successfully.");
-      } catch (error) {
-        updateInfo(`Model loading failed: ${error.message}`);
-      }
+      model = await tf.loadLayersModel('jsModel/model.json');
+      console.log("Модель загружена");
     }
 
     async function activateXR() {
-      try {
-        const canvas = document.createElement('canvas');
-        document.body.appendChild(canvas);
-        const gl = canvas.getContext('webgl', { xrCompatible: true });
+      const canvas = document.createElement('canvas');
+      document.body.appendChild(canvas);
+      const gl = canvas.getContext('webgl', { xrCompatible: true });
 
-        session = await navigator.xr.requestSession('immersive-ar', {
-          requiredFeatures: ['hit-test', 'dom-overlay', 'camera-access'],
-          domOverlay: { root: document.body }
-        });
-        session.updateRenderState({ baseLayer: new XRWebGLLayer(session, gl) });
+      session = await navigator.xr.requestSession('immersive-ar', {
+        requiredFeatures: ['hit-test', 'dom-overlay', 'camera-access'],
+        domOverlay: { root: document.body }
+      });
+      session.updateRenderState({ baseLayer: new XRWebGLLayer(session, gl) });
 
-        glBinding = new XRWebGLBinding(session, gl);
+      glBinding = new XRWebGLBinding(session, gl);
 
-        const referenceSpace = await session.requestReferenceSpace('local');
-        const viewerSpace = await session.requestReferenceSpace('viewer');
-        const hitTestSource = await session.requestHitTestSource({ space: viewerSpace });
+      const referenceSpace = await session.requestReferenceSpace('local');
+      const viewerSpace = await session.requestReferenceSpace('viewer');
+      const hitTestSource = await session.requestHitTestSource({ space: viewerSpace });
 
-        renderer = new THREE.WebGLRenderer({ canvas: canvas, context: gl, alpha: true });
-        renderer.autoClear = false;
-        camera = new THREE.PerspectiveCamera();
-        camera.matrixAutoUpdate = false;
-        scene = new THREE.Scene();
+      renderer = new THREE.WebGLRenderer({ canvas: canvas, context: gl, alpha: true });
+      renderer.autoClear = false;
+      camera = new THREE.PerspectiveCamera();
+      camera.matrixAutoUpdate = false;
+      scene = new THREE.Scene();
 
-        const directionalLight = new THREE.DirectionalLight(0xffffff, 0.3);
-        directionalLight.position.set(10, 15, 10);
-        scene.add(directionalLight);
+      const directionalLight = new THREE.DirectionalLight(0xffffff, 0.3);
+      directionalLight.position.set(10, 15, 10);
+      scene.add(directionalLight);
 
-        const loader = new THREE.GLTFLoader();
-        loader.load('https://immersive-web.github.io/webxr-samples/media/gltf/reticle/reticle.gltf', (gltf) => {
-          reticle = gltf.scene;
-          reticle.visible = false;
-          scene.add(reticle);
-        }, undefined, (error) => {
-          updateInfo(`Error loading reticle model: ${error.message}`);
-        });
+      const loader = new THREE.GLTFLoader();
+      loader.load('https://immersive-web.github.io/webxr-samples/media/gltf/reticle/reticle.gltf', (gltf) => {
+        reticle = gltf.scene;
+        reticle.visible = false;
+        scene.add(reticle);
+      });
 
-        loader.load('https://immersive-web.github.io/webxr-samples/media/gltf/sunflower/sunflower.gltf', (gltf) => {
-          flower = gltf.scene;
-        }, undefined, (error) => {
-          updateInfo(`Error loading flower model: ${error.message}`);
-        });
+      loader.load('https://immersive-web.github.io/webxr-samples/media/gltf/sunflower/sunflower.gltf', (gltf) => {
+        flower = gltf.scene;
+      });
 
-        const onXRFrame = async (time, frame) => {
-          session.requestAnimationFrame(onXRFrame);
-
-          gl.bindFramebuffer(gl.FRAMEBUFFER, session.renderState.baseLayer.framebuffer);
-
-          const pose = frame.getViewerPose(referenceSpace);
-          if (pose) {
-            const view = pose.views[0];
-
-            const viewport = session.renderState.baseLayer.getViewport(view);
-            renderer.setSize(viewport.width, viewport.height);
-
-            camera.matrix.fromArray(view.transform.matrix);
-            camera.projectionMatrix.fromArray(view.projectionMatrix);
-            camera.updateMatrixWorld(true);
-
-            const hitTestResults = frame.getHitTestResults(hitTestSource);
-            if (hitTestResults.length > 0 && reticle) {
-              const hitPose = hitTestResults[0].getPose(referenceSpace);
-              reticle.visible = true;
-              reticle.position.set(hitPose.transform.position.x, hitPose.transform.position.y, hitPose.transform.position.z);
-              reticle.updateMatrixWorld(true);
-            }
-
-            const flowerInScene = scene.children.find(child => child.name === 'sunflower');
-            if (flowerInScene) {
-              if (captureNext && view.camera) {
-                captureNext = false;  // Stop capture after the frame
-                captureImage(gl, glBinding, view.camera, 0);
-              }
-            }
-
-            renderer.render(scene, camera);
-          }
-        };
-
+      const onXRFrame = async (time, frame) => {
         session.requestAnimationFrame(onXRFrame);
 
-        document.getElementById('startARBtn').style.display = 'none';
-        document.querySelector('.overlay').style.display = 'block';
+        gl.bindFramebuffer(gl.FRAMEBUFFER, session.renderState.baseLayer.framebuffer);
 
-        document.getElementById('placeFlowerBtn').addEventListener('click', placeFlower);
-        document.getElementById('showInfoBtn').addEventListener('click', showInfo);
-      } catch (error) {
-        updateInfo(`AR activation failed: ${error.message}`);
-      }
+        const pose = frame.getViewerPose(referenceSpace);
+        if (pose) {
+          const view = pose.views[0];
+
+          const viewport = session.renderState.baseLayer.getViewport(view);
+          renderer.setSize(viewport.width, viewport.height);
+
+          camera.matrix.fromArray(view.transform.matrix);
+          camera.projectionMatrix.fromArray(view.projectionMatrix);
+          camera.updateMatrixWorld(true);
+
+          const hitTestResults = frame.getHitTestResults(hitTestSource);
+          if (hitTestResults.length > 0 && reticle) {
+            const hitPose = hitTestResults[0].getPose(referenceSpace);
+            reticle.visible = true;
+            reticle.position.set(hitPose.transform.position.x, hitPose.transform.position.y, hitPose.transform.position.z);
+            reticle.updateMatrixWorld(true);
+          }
+
+          const flowerInScene = scene.children.find(child => child.name === 'sunflower');
+          if (flowerInScene) {
+            if (captureNext && view.camera) {
+              zDistance = flowerInScene.position.y - pose.views[0].transform.position.y;
+
+              const cameraOrientation = pose.views[0].transform.orientation;
+              const cameraQuaternion = new THREE.Quaternion(cameraOrientation.x, cameraOrientation.y, cameraOrientation.z, cameraOrientation.w);
+
+              const gravityVector = new THREE.Vector3(0, -1, 0);
+              const downVector = new THREE.Vector3(0, 0, -1).applyQuaternion(cameraQuaternion);
+
+              const angle = downVector.angleTo(gravityVector);
+              const rotationAxis = new THREE.Vector3().crossVectors(downVector, gravityVector).normalize();
+              const rotationQuaternion = new THREE.Quaternion().setFromAxisAngle(rotationAxis, angle);
+              const euler = new THREE.Euler().setFromQuaternion(rotationQuaternion, 'XYZ');
+              rotationVector = new THREE.Vector3(euler.x, euler.y, euler.z);
+
+              const radToDeg = 180 / Math.PI;
+              const rotationVectorDegrees = new THREE.Vector3(
+                rotationVector.x * radToDeg,
+                rotationVector.y * radToDeg,
+                rotationVector.z * radToDeg
+              );
+
+              document.getElementById('info').innerText =
+                `Distance Z: ${zDistance.toFixed(2)}\n` +
+                `Camera to Gravity Angle: (${rotationVectorDegrees.x.toFixed(2)}°, ${rotationVectorDegrees.y.toFixed(2)}°, ${rotationVectorDegrees.z.toFixed(2)}°)`;
+
+              captureNext = false;  // Останавливаем захват после кадра
+              captureImage(gl, glBinding, view.camera);
+            }
+          }
+
+          renderer.render(scene, camera);
+        }
+      };
+
+      session.requestAnimationFrame(onXRFrame);
+
+      document.getElementById('startARBtn').style.display = 'none';
+      document.querySelector('.overlay').style.display = 'block';
+
+      document.getElementById('placeFlowerBtn').addEventListener('click', placeFlower);
+      document.getElementById('showInfoBtn').addEventListener('click', showInfo);
     }
 
     async function startAR() {
       if (navigator.xr) {
-        await loadModel();
+        await loadModel();  // Загрузка модели перед началом XR-сессии
         await activateXR();
       } else {
-        updateInfo('WebXR not supported');
+        alert('WebXR not supported');
       }
     }
 
@@ -152,153 +169,59 @@
         flowerClone.name = 'sunflower';
         scene.add(flowerClone);
         flowerPlaced = true;
-        updateInfo('Flower placed.');
       } else {
         const flowerInScene = scene.children.find(child => child.name === 'sunflower');
         if (flowerInScene) {
           flowerInScene.position.copy(reticle.position);
-          updateInfo('Flower moved.');
         }
       }
     }
 
     function showInfo() {
-      if (!flowerPlaced) {
-        updateInfo('Flower not placed yet.');
-      }
-    }
-
-    async function captureImage(gl, glBinding, camera, captureIndex) {
-      try {
-        const texture = glBinding.getCameraImage(camera);
-        const width = camera.width;
-        const height = camera.height;
-
-        if (!texture) {
-          updateInfo('Failed to get camera texture');
-          return;
-        }
-
-        const scale = 1;
-        const scaledWidth = Math.floor(width * scale);
-        const scaledHeight = Math.floor(height * scale);
-        const textureBytes = scaledWidth * scaledHeight * 4;
-
-        let readbackPixels = new Uint8Array(textureBytes);
-        readbackPixels.fill(0);
-
-        let copyTexture = gl.createTexture();
-        gl.bindTexture(gl.TEXTURE_2D, copyTexture);
-        gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, scaledWidth, scaledHeight, 0, gl.RGBA, gl.UNSIGNED_BYTE, null);
-        gl.bindTexture(gl.TEXTURE_2D, null);
-
-        let framebuffer = gl.createFramebuffer();
-        gl.bindFramebuffer(gl.FRAMEBUFFER, framebuffer);
-        gl.framebufferTexture2D(gl.FRAMEBUFFER, gl.COLOR_ATTACHMENT0, gl.TEXTURE_2D, copyTexture, 0);
-
-        if (gl.checkFramebufferStatus(gl.FRAMEBUFFER) !== gl.FRAMEBUFFER_COMPLETE) {
-          updateInfo("Framebuffer incomplete!");
-          return;
-        }
-
-        const vertexShaderSource = `
-          attribute vec4 aVertexPosition;
-          varying vec2 vTexCoord;
-          void main(void) {
-            gl_Position = aVertexPosition;
-            vTexCoord = (aVertexPosition.xy + 1.0) / 2.0;
-          }
-        `;
-        const fragmentShaderSource = `
-          precision mediump float;
-          varying vec2 vTexCoord;
-          uniform sampler2D uSampler;
-          void main(void) {
-            gl_FragColor = texture2D(uSampler, vTexCoord);
-          }
-        `;
-
-        const vertexShader = gl.createShader(gl.VERTEX_SHADER);
-        gl.shaderSource(vertexShader, vertexShaderSource);
-        gl.compileShader(vertexShader);
-        if (!gl.getShaderParameter(vertexShader, gl.COMPILE_STATUS)) {
-          updateInfo('Vertex shader compile error: ' + gl.getShaderInfoLog(vertexShader));
-          gl.deleteShader(vertexShader);
-          return;
-        }
-
-        const fragmentShader = gl.createShader(gl.FRAGMENT_SHADER);
-        gl.shaderSource(fragmentShader, fragmentShaderSource);
-        gl.compileShader(fragmentShader);
-        if (!gl.getShaderParameter(fragmentShader, gl.COMPILE_STATUS)) {
-          updateInfo('Fragment shader compile error: ' + gl.getShaderInfoLog(fragmentShader));
-          gl.deleteShader(fragmentShader);
-          return;
-        }
-
-        const program = gl.createProgram();
-        gl.attachShader(program, vertexShader);
-        gl.attachShader(program, fragmentShader);
-        gl.linkProgram(program);
-        if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
-          updateInfo('Program link error: ' + gl.getProgramInfoLog(program));
-          return;
-        }
-
-        gl.useProgram(program);
-        gl.activeTexture(gl.TEXTURE0);
-        gl.bindTexture(gl.TEXTURE_2D, texture);
-        gl.uniform1i(gl.getUniformLocation(program, "uSampler"), 0);
-
-        const vertices = new Float32Array([
-          -1.0, -1.0,
-           1.0, -1.0,
-          -1.0,  1.0,
-           1.0,  1.0
-        ]);
-
-        const vertexBuffer = gl.createBuffer();
-        gl.bindBuffer(gl.ARRAY_BUFFER, vertexBuffer);
-        gl.bufferData(gl.ARRAY_BUFFER, vertices, gl.STATIC_DRAW);
-
-        const aVertexPosition = gl.getAttribLocation(program, 'aVertexPosition');
-        gl.enableVertexAttribArray(aVertexPosition);
-        gl.vertexAttribPointer(aVertexPosition, 2, gl.FLOAT, false, 0, 0);
-
-        gl.clear(gl.COLOR_BUFFER_BIT);
-        gl.drawArrays(gl.TRIANGLE_STRIP, 0, 4);
-
-        gl.readPixels(0, 0, scaledWidth, scaledHeight, gl.RGBA, gl.UNSIGNED_BYTE, readbackPixels);
-
-        const canvas = document.createElement('canvas');
-        canvas.width = scaledWidth;
-        canvas.height = scaledHeight;
-        const ctx = canvas.getContext('2d');
-        const imageData = ctx.createImageData(scaledWidth, scaledHeight);
-        imageData.data.set(readbackPixels);
-        ctx.putImageData(imageData, 0, 0);
-
-        const dataURL = canvas.toDataURL('image/png');
-        const link = document.createElement('a');
-        link.href = dataURL;
-        link.download = `captured-image-${captureIndex}.png`;
-        link.click();
-
-        updateInfo(`Image captured and saved as captured-image-${captureIndex}.png`);
-      } catch (error) {
-        updateInfo(`Image capture failed: ${error.message}`);
-      }
-    }
-
-    function updateInfo(message) {
       const infoElement = document.getElementById('info');
-      infoElement.textContent = message;
+      if (infoElement.style.display === 'none') {
+        infoElement.style.display = 'block';
+      } else {
+        infoElement.style.display = 'none';
+      }
+    }
+
+    async function captureImage(gl, glBinding, camera) {
+      const frame = glBinding.getCurrentFramebuffer();
+      const width = gl.canvas.width;
+      const height = gl.canvas.height;
+      const imageData = new Uint8Array(width * height * 4);
+
+      gl.bindFramebuffer(gl.FRAMEBUFFER, frame);
+      gl.readPixels(0, 0, width, height, gl.RGBA, gl.UNSIGNED_BYTE, imageData);
+
+      const tensor = tf.browser.fromPixels(new ImageData(new Uint8ClampedArray(imageData), width, height));
+      const resizedTensor = tf.image.resizeBilinear(tensor, [224, 224]).toFloat().expandDims(0);
+      const prediction = await model.predict(resizedTensor).data();
+
+      const predictionImageData = new Uint8Array(224 * 224 * 4);
+      for (let i = 0; i < prediction.length; i++) {
+        const value = Math.max(0, Math.min(1, prediction[i])) * 255;
+        predictionImageData[i * 4] = value;
+        predictionImageData[i * 4 + 1] = value;
+        predictionImageData[i * 4 + 2] = value;
+        predictionImageData[i * 4 + 3] = 255;  // Alpha channel
+      }
+
+      const predictionImage = new ImageData(new Uint8ClampedArray(predictionImageData), 224, 224);
+      const canvas = document.createElement('canvas');
+      canvas.width = 224;
+      canvas.height = 224;
+      const context = canvas.getContext('2d');
+      context.putImageData(predictionImage, 0, 0);
+
+      const predictionImageElement = document.getElementById('predictionImage');
+      predictionImageElement.src = canvas.toDataURL();
+      predictionImageElement.style.display = 'block';
     }
 
     document.getElementById('startARBtn').addEventListener('click', startAR);
-    document.getElementById('captureButton').addEventListener('click', () => {
-      captureNext = true;
-    });
+    document.getElementById('captureButton').addEventListener('click', () => captureNext = true);
   </script>
 </body>
 </html>
