--- a/main.html
+++ b/main.html
@@ -36,111 +36,130 @@
     let model;
     let predictionCanvas, predictionContext;
 
+    function logInfo(message) {
+      const infoElement = document.getElementById('info');
+      infoElement.innerText += `\n${message}`;
+      console.log(message);
+    }
+
     async function loadModel() {
       try {
+        logInfo('Loading model...');
         model = await tf.loadLayersModel('jsModel/model.json');
-        console.log("Model loaded successfully.");
-        document.getElementById('info').innerText += "\nModel loaded successfully.";
+        logInfo('Model loaded successfully.');
       } catch (error) {
-        console.error("Failed to load model: ", error);
-        document.getElementById('info').innerText += "\nFailed to load model: " + error;
+        logInfo('Failed to load model: ' + error.message);
       }
     }
 
     async function activateXR() {
-      const canvas = document.createElement('canvas');
-      document.body.appendChild(canvas);
-      const gl = canvas.getContext('webgl', { xrCompatible: true });
+      try {
+        logInfo('Activating XR...');
+        const canvas = document.createElement('canvas');
+        document.body.appendChild(canvas);
+        const gl = canvas.getContext('webgl', { xrCompatible: true });
 
-      session = await navigator.xr.requestSession('immersive-ar', {
-        requiredFeatures: ['hit-test', 'dom-overlay', 'camera-access'],
-        domOverlay: { root: document.body }
-      });
-      session.updateRenderState({ baseLayer: new XRWebGLLayer(session, gl) });
+        session = await navigator.xr.requestSession('immersive-ar', {
+          requiredFeatures: ['hit-test', 'dom-overlay', 'camera-access'],
+          domOverlay: { root: document.body }
+        });
+        session.updateRenderState({ baseLayer: new XRWebGLLayer(session, gl) });
 
-      glBinding = new XRWebGLBinding(session, gl);
+        glBinding = new XRWebGLBinding(session, gl);
 
-      const referenceSpace = await session.requestReferenceSpace('local');
-      const viewerSpace = await session.requestReferenceSpace('viewer');
-      const hitTestSource = await session.requestHitTestSource({ space: viewerSpace });
+        const referenceSpace = await session.requestReferenceSpace('local');
+        const viewerSpace = await session.requestReferenceSpace('viewer');
+        const hitTestSource = await session.requestHitTestSource({ space: viewerSpace });
 
-      renderer = new THREE.WebGLRenderer({ canvas: canvas, context: gl, alpha: true });
-      renderer.autoClear = false;
-      camera = new THREE.PerspectiveCamera();
-      camera.matrixAutoUpdate = false;
-      scene = new THREE.Scene();
+        renderer = new THREE.WebGLRenderer({ canvas: canvas, context: gl, alpha: true });
+        renderer.autoClear = false;
+        camera = new THREE.PerspectiveCamera();
+        camera.matrixAutoUpdate = false;
+        scene = new THREE.Scene();
 
-      const directionalLight = new THREE.DirectionalLight(0xffffff, 0.3);
-      directionalLight.position.set(10, 15, 10);
-      scene.add(directionalLight);
+        const directionalLight = new THREE.DirectionalLight(0xffffff, 0.3);
+        directionalLight.position.set(10, 15, 10);
+        scene.add(directionalLight);
 
-      const loader = new THREE.GLTFLoader();
-      loader.load('https://immersive-web.github.io/webxr-samples/media/gltf/reticle/reticle.gltf', (gltf) => {
-        reticle = gltf.scene;
-        reticle.visible = false;
-        scene.add(reticle);
-      });
+        const loader = new THREE.GLTFLoader();
+        loader.load('https://immersive-web.github.io/webxr-samples/media/gltf/reticle/reticle.gltf', (gltf) => {
+          reticle = gltf.scene;
+          reticle.visible = false;
+          scene.add(reticle);
+          logInfo('Reticle model loaded.');
+        }, undefined, (error) => {
+          logInfo('Error loading reticle model: ' + error.message);
+        });
 
-      loader.load('https://immersive-web.github.io/webxr-samples/media/gltf/sunflower/sunflower.gltf', (gltf) => {
-        flower = gltf.scene;
-      });
+        loader.load('https://immersive-web.github.io/webxr-samples/media/gltf/sunflower/sunflower.gltf', (gltf) => {
+          flower = gltf.scene;
+          logInfo('Flower model loaded.');
+        }, undefined, (error) => {
+          logInfo('Error loading flower model: ' + error.message);
+        });
 
-      const onXRFrame = async (time, frame) => {
+        const onXRFrame = async (time, frame) => {
+          session.requestAnimationFrame(onXRFrame);
+
+          gl.bindFramebuffer(gl.FRAMEBUFFER, session.renderState.baseLayer.framebuffer);
+
+          const pose = frame.getViewerPose(referenceSpace);
+          if (pose) {
+            const view = pose.views[0];
+
+            const viewport = session.renderState.baseLayer.getViewport(view);
+            renderer.setSize(viewport.width, viewport.height);
+
+            camera.matrix.fromArray(view.transform.matrix);
+            camera.projectionMatrix.fromArray(view.projectionMatrix);
+            camera.updateMatrixWorld(true);
+
+            const hitTestResults = frame.getHitTestResults(hitTestSource);
+            if (hitTestResults.length > 0 && reticle) {
+              const hitPose = hitTestResults[0].getPose(referenceSpace);
+              reticle.visible = true;
+              reticle.position.set(hitPose.transform.position.x, hitPose.transform.position.y, hitPose.transform.position.z);
+              reticle.updateMatrixWorld(true);
+            }
+
+            const flowerInScene = scene.children.find(child => child.name === 'sunflower');
+            if (flowerInScene) {
+              if (captureNext && view.camera) {
+                captureNext = false;
+                await captureImage(gl, glBinding, view.camera);
+              }
+            }
+
+            renderer.render(scene, camera);
+          }
+        };
+
         session.requestAnimationFrame(onXRFrame);
 
-        gl.bindFramebuffer(gl.FRAMEBUFFER, session.renderState.baseLayer.framebuffer);
+        document.getElementById('startARBtn').style.display = 'none';
+        document.querySelector('.overlay').style.display = 'block';
 
-        const pose = frame.getViewerPose(referenceSpace);
-        if (pose) {
-          const view = pose.views[0];
-
-          const viewport = session.renderState.baseLayer.getViewport(view);
-          renderer.setSize(viewport.width, viewport.height);
-
-          camera.matrix.fromArray(view.transform.matrix);
-          camera.projectionMatrix.fromArray(view.projectionMatrix);
-          camera.updateMatrixWorld(true);
-
-          const hitTestResults = frame.getHitTestResults(hitTestSource);
-          if (hitTestResults.length > 0 && reticle) {
-            const hitPose = hitTestResults[0].getPose(referenceSpace);
-            reticle.visible = true;
-            reticle.position.set(hitPose.transform.position.x, hitPose.transform.position.y, hitPose.transform.position.z);
-            reticle.updateMatrixWorld(true);
-          }
-
-          const flowerInScene = scene.children.find(child => child.name === 'sunflower');
-          if (flowerInScene) {
-            if (captureNext && view.camera) {
-              captureNext = false;  // Останавливаем захват после кадра
-              await captureImage(gl, glBinding, view.camera);
-            }
-          }
-
-          renderer.render(scene, camera);
-        }
-      };
-
-      session.requestAnimationFrame(onXRFrame);
-
-      document.getElementById('startARBtn').style.display = 'none';
-      document.querySelector('.overlay').style.display = 'block';
-
-      document.getElementById('placeFlowerBtn').addEventListener('click', placeFlower);
-      document.getElementById('showInfoBtn').addEventListener('click', showInfo);
+        document.getElementById('placeFlowerBtn').addEventListener('click', placeFlower);
+        document.getElementById('showInfoBtn').addEventListener('click', showInfo);
+      } catch (error) {
+        logInfo('Error activating XR: ' + error.message);
+      }
     }
 
     async function startAR() {
       if (navigator.xr) {
-        await loadModel();  // Загрузка модели перед началом XR-сессии
+        await loadModel();
         await activateXR();
       } else {
-        alert('WebXR not supported');
+        logInfo('WebXR not supported');
       }
     }
 
     async function placeFlower() {
-      if (!flower) return;
+      if (!flower) {
+        logInfo('Flower model not loaded yet.');
+        return;
+      }
 
       if (!flowerPlaced) {
         const flowerClone = flower.clone();
@@ -148,29 +167,32 @@
         flowerClone.name = 'sunflower';
         scene.add(flowerClone);
         flowerPlaced = true;
+        logInfo('Flower placed in scene.');
       } else {
         const flowerInScene = scene.children.find(child => child.name === 'sunflower');
         if (flowerInScene) {
           flowerInScene.position.copy(reticle.position);
+          logInfo('Flower moved to new position.');
+        } else {
+          logInfo('Flower not found in scene.');
         }
       }
     }
 
     function showInfo() {
       if (!flowerPlaced) {
-        document.getElementById('info').innerText = 'Flower not placed yet.';
-        return;
+        logInfo('Flower not placed yet.');
       }
     }
 
     async function captureImage(gl, glBinding, dcamera) {
+      logInfo('Starting image capture...');
       const texture = glBinding.getCameraImage(dcamera);
       const width = dcamera.width;
       const height = dcamera.height;
 
       if (!texture) {
-        console.error('Failed to get camera texture');
-        document.getElementById('info').innerText += "\nFailed to get camera texture";
+        logInfo('Failed to get camera texture.');
         return;
       }
 
@@ -192,12 +214,78 @@
       gl.framebufferTexture2D(gl.FRAMEBUFFER, gl.COLOR_ATTACHMENT0, gl.TEXTURE_2D, copyTexture, 0);
 
       if (gl.checkFramebufferStatus(gl.FRAMEBUFFER) !== gl.FRAMEBUFFER_COMPLETE) {
-        console.error("Framebuffer incomplete!");
-        document.getElementById('info').innerText += "\nFramebuffer incomplete!";
+        logInfo('Framebuffer incomplete!');
         return;
       }
 
+      const vertexShaderSource = `
+        attribute vec4 aVertexPosition;
+        varying vec2 vTexCoord;
+        void main(void) {
+          gl_Position = aVertexPosition;
+          vTexCoord = (aVertexPosition.xy + 1.0) / 2.0;
+        }
+      `;
+      const fragmentShaderSource = `
+        precision mediump float;
+        varying vec2 vTexCoord;
+        uniform sampler2D uSampler;
+        void main(void) {
+          gl_FragColor = texture2D(uSampler, vTexCoord);
+        }
+      `;
+
+      const vertexShader = gl.createShader(gl.VERTEX_SHADER);
+      gl.shaderSource(vertexShader, vertexShaderSource);
+      gl.compileShader(vertexShader);
+      if (!gl.getShaderParameter(vertexShader, gl.COMPILE_STATUS)) {
+        logInfo('Error compiling vertex shader: ' + gl.getShaderInfoLog(vertexShader));
+        gl.deleteShader(vertexShader);
+        return;
+      }
+
+      const fragmentShader = gl.createShader(gl.FRAGMENT_SHADER);
+      gl.shaderSource(fragmentShader, fragmentShaderSource);
+      gl.compileShader(fragmentShader);
+      if (!gl.getShaderParameter(fragmentShader, gl.COMPILE_STATUS)) {
+        logInfo('Error compiling fragment shader: ' + gl.getShaderInfoLog(fragmentShader));
+        gl.deleteShader(fragmentShader);
+        return;
+      }
+
+      const program = gl.createProgram();
+      gl.attachShader(program, vertexShader);
+      gl.attachShader(program, fragmentShader);
+      gl.linkProgram(program);
+      if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
+        logInfo('Error linking program: ' + gl.getProgramInfoLog(program));
+        return;
+      }
+
+      gl.useProgram(program);
+      gl.activeTexture(gl.TEXTURE0);
+      gl.bindTexture(gl.TEXTURE_2D, texture);
+      gl.uniform1i(gl.getUniformLocation(program, 'uSampler'), 0);
+
+      const vertices = new Float32Array([
+        -1.0, -1.0,
+         1.0, -1.0,
+        -1.0,  1.0,
+         1.0,  1.0,
+      ]);
+      const positionBuffer = gl.createBuffer();
+      gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
+      gl.bufferData(gl.ARRAY_BUFFER, vertices, gl.STATIC_DRAW);
+      const position = gl.getAttribLocation(program, 'aVertexPosition');
+      gl.enableVertexAttribArray(position);
+      gl.vertexAttribPointer(position, 2, gl.FLOAT, false, 0, 0);
+
+      gl.viewport(0, 0, scaledWidth, scaledHeight);
+      gl.drawArrays(gl.TRIANGLE_STRIP, 0, 4);
+
       gl.readPixels(0, 0, scaledWidth, scaledHeight, gl.RGBA, gl.UNSIGNED_BYTE, readbackPixels);
+
+      logInfo('Image captured from WebGL.');
 
       const imageData = new Uint8ClampedArray(readbackPixels.buffer);
       const canvas = document.createElement('canvas');
@@ -207,23 +295,38 @@
       const image = new ImageData(imageData, scaledWidth, scaledHeight);
       context.putImageData(image, 0, 0);
 
-      const inputImage = tf.browser.fromPixels(canvas).toFloat().expandDims(0);
-      const prediction = await model.predict(inputImage).squeeze().array();
+      try {
+        logInfo('Preparing image for model prediction.');
+        const inputImage = tf.browser.fromPixels(canvas).toFloat().expandDims(0);
+        const prediction = await model.predict(inputImage).squeeze().array();
+        logInfo('Prediction completed.');
 
-      const outputCanvas = document.createElement('canvas');
-      outputCanvas.width = scaledWidth;
-      outputCanvas.height = scaledHeight;
-      const outputContext = outputCanvas.getContext('2d');
-      const outputImageData = new ImageData(new Uint8ClampedArray(prediction[0]), scaledWidth, scaledHeight);
-      outputContext.putImageData(outputImageData, 0, 0);
+        const outputCanvas = document.createElement('canvas');
+        outputCanvas.width = scaledWidth;
+        outputCanvas.height = scaledHeight;
+        const outputContext = outputCanvas.getContext('2d');
+        const outputImageData = new ImageData(new Uint8ClampedArray(prediction[0]), scaledWidth, scaledHeight);
+        outputContext.putImageData(outputImageData, 0, 0);
 
-      const dataURL = outputCanvas.toDataURL();
-      const a = document.createElement('a');
-      a.href = dataURL;
-      a.download = 'prediction.png';
-      a.click();
+        const dataURL = outputCanvas.toDataURL();
+        const a = document.createElement('a');
+        a.href = dataURL;
+        a.download = 'prediction.png';
+        a.click();
+        logInfo('Prediction image saved as prediction.png.');
 
-      document.getElementById('info').innerText += "\nCaptured and predicted image.";
+      } catch (error) {
+        logInfo('Error during model prediction: ' + error.message);
+      } finally {
+        gl.bindFramebuffer(gl.FRAMEBUFFER, null);
+        gl.deleteFramebuffer(framebuffer);
+        gl.deleteTexture(copyTexture);
+        gl.deleteProgram(program);
+        gl.deleteShader(vertexShader);
+        gl.deleteShader(fragmentShader);
+        gl.deleteBuffer(positionBuffer);
+        logInfo('Cleaned up resources after image capture.');
+      }
     }
 
     document.getElementById('startARBtn').addEventListener('click', startAR);
